--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">SHessYoach</string>
     <string name="menu_icon_desc">null img</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="start_game">Start Game</string>
+    <string name="load_game">Load Game</string>
+    <string name="create_game_from_san">Create Game From SAN</string>
 </resources>
